{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 483,
  "lineage": "862fd69b-7553-e362-3004-851971e2d72b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033a2d5ae507922b6",
            "arn": "arn:aws:ec2:us-east-1:909487697971:elastic-ip/eipalloc-033a2d5ae507922b6",
            "association_id": "eipassoc-093b92c6bb7b17ae0",
            "domain": "vpc",
            "id": "eipalloc-033a2d5ae507922b6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0374a746e70a8f95f",
            "private_dns": "ip-10-0-14-16.ec2.internal",
            "private_ip": "10.0.14.16",
            "public_dns": "ec2-52-207-3-18.compute-1.amazonaws.com",
            "public_ip": "52.207.3.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ShopCloud-NAT-EIP"
            },
            "tags_all": {
              "Name": "ShopCloud-NAT-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:internet-gateway/igw-03ea77ea672d3e015",
            "id": "igw-03ea77ea672d3e015",
            "owner_id": "909487697971",
            "tags": {
              "Name": "ShopCloud-IGW"
            },
            "tags_all": {
              "Name": "ShopCloud-IGW"
            },
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "admin_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:loadbalancer/app/shopcloud-admin-alb-dev/3d93b16df9c65563",
            "arn_suffix": "app/shopcloud-admin-alb-dev/3d93b16df9c65563",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-shopcloud-admin-alb-dev-919254825.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:909487697971:loadbalancer/app/shopcloud-admin-alb-dev/3d93b16df9c65563",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shopcloud-admin-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d585d81e65707789"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022da08ec290993e2"
              },
              {
                "subnet_id": "subnet-08cd956b6f8ec8b02"
              }
            ],
            "subnets": [
              "subnet-022da08ec290993e2",
              "subnet-08cd956b6f8ec8b02"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shopcloud-admin-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopcloud-admin-alb"
            },
            "vpc_id": "vpc-0593e90ba5de1af25",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "customer_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:loadbalancer/app/shopcloud-customer-alb-dev/be76ac8ec76f075f",
            "arn_suffix": "app/shopcloud-customer-alb-dev/be76ac8ec76f075f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "shopcloud-customer-alb-dev-766009344.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:909487697971:loadbalancer/app/shopcloud-customer-alb-dev/be76ac8ec76f075f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shopcloud-customer-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d76a9ef369c3f50c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a8c7b207546307e"
              },
              {
                "subnet_id": "subnet-0cc5da8ceb5844298"
              }
            ],
            "subnets": [
              "subnet-02a8c7b207546307e",
              "subnet-0cc5da8ceb5844298"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shopcloud-customer-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopcloud-customer-alb"
            },
            "vpc_id": "vpc-0593e90ba5de1af25",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.customer_ingress",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "admin_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:listener/app/shopcloud-admin-alb-dev/3d93b16df9c65563/40d2451453683b92",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:targetgroup/shopcloud-admin-frontend-dev/c3fc1b5f31a042dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:909487697971:listener/app/shopcloud-admin-alb-dev/3d93b16df9c65563/40d2451453683b92",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:loadbalancer/app/shopcloud-admin-alb-dev/3d93b16df9c65563",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.admin_internal",
            "aws_lb_target_group.admin_frontend",
            "aws_security_group.admin",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "customer_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:listener/app/shopcloud-customer-alb-dev/be76ac8ec76f075f/9bf208fec5cea2fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:targetgroup/shopcloud-customer-frontend-dev/165564b896fda62c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:909487697971:listener/app/shopcloud-customer-alb-dev/be76ac8ec76f075f/9bf208fec5cea2fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:loadbalancer/app/shopcloud-customer-alb-dev/be76ac8ec76f075f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.customer_public",
            "aws_lb_target_group.customer_frontend",
            "aws_security_group.customer_ingress",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "customer_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "admin_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:targetgroup/shopcloud-admin-frontend-dev/c3fc1b5f31a042dc",
            "arn_suffix": "targetgroup/shopcloud-admin-frontend-dev/c3fc1b5f31a042dc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:909487697971:targetgroup/shopcloud-admin-frontend-dev/c3fc1b5f31a042dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:909487697971:loadbalancer/app/shopcloud-admin-alb-dev/3d93b16df9c65563"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shopcloud-admin-frontend-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shopcloud-admin-frontend-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopcloud-admin-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "customer_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:909487697971:targetgroup/shopcloud-customer-frontend-dev/165564b896fda62c",
            "arn_suffix": "targetgroup/shopcloud-customer-frontend-dev/165564b896fda62c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:909487697971:targetgroup/shopcloud-customer-frontend-dev/165564b896fda62c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:909487697971:loadbalancer/app/shopcloud-customer-alb-dev/be76ac8ec76f075f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shopcloud-customer-frontend-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shopcloud-customer-frontend-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopcloud-customer-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033a2d5ae507922b6",
            "association_id": "eipassoc-093b92c6bb7b17ae0",
            "connectivity_type": "public",
            "id": "nat-0d64c2df16af8149c",
            "network_interface_id": "eni-0374a746e70a8f95f",
            "private_ip": "10.0.14.16",
            "public_ip": "52.207.3.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc5da8ceb5844298",
            "tags": {
              "Name": "ShopCloud-NAT-GW"
            },
            "tags_all": {
              "Name": "ShopCloud-NAT-GW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:route-table/rtb-0c01e860e1bc161db",
            "id": "rtb-0c01e860e1bc161db",
            "owner_id": "909487697971",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ShopCloud-Isolated-RT"
            },
            "tags_all": {
              "Name": "ShopCloud-Isolated-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:route-table/rtb-02e651e0efb6b03e0",
            "id": "rtb-02e651e0efb6b03e0",
            "owner_id": "909487697971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d64c2df16af8149c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ShopCloud-Private-RT"
            },
            "tags_all": {
              "Name": "ShopCloud-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:route-table/rtb-0caa39bd9b2ad0c19",
            "id": "rtb-0caa39bd9b2ad0c19",
            "owner_id": "909487697971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ea77ea672d3e015",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ShopCloud-Public-RT"
            },
            "tags_all": {
              "Name": "ShopCloud-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dcefd0cfc05c4bc",
            "route_table_id": "rtb-0c01e860e1bc161db",
            "subnet_id": "subnet-06856645e2c6fc186"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.isolated",
            "aws_subnet.db_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03752106493cd6308",
            "route_table_id": "rtb-0c01e860e1bc161db",
            "subnet_id": "subnet-075fa42dd6ae52b93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.isolated",
            "aws_subnet.db_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cae5f169ed8dc4fc",
            "route_table_id": "rtb-02e651e0efb6b03e0",
            "subnet_id": "subnet-08cd956b6f8ec8b02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c01fc8a1a16d6dc",
            "route_table_id": "rtb-02e651e0efb6b03e0",
            "subnet_id": "subnet-022da08ec290993e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f6898f790a294db",
            "route_table_id": "rtb-0caa39bd9b2ad0c19",
            "subnet_id": "subnet-0cc5da8ceb5844298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:security-group/sg-0d585d81e65707789",
            "description": "Admin frontend entrypoint restricted to the VPN CIDR",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow admin frontend to reach admin-service",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06256704b1c373fe0"
                ],
                "self": false,
                "to_port": 8084
              },
              {
                "cidr_blocks": [],
                "description": "Allow admin frontend to reach auth-service",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06256704b1c373fe0"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0d585d81e65707789",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.100.0.0/22"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shopcloud-admin-sg",
            "name_prefix": "",
            "owner_id": "909487697971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopcloud-admin-sg"
            },
            "tags_all": {
              "Name": "shopcloud-admin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:security-group/sg-06256704b1c373fe0",
            "description": "Backend microservices shared by the API layer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow backend services to reach PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053bd557b6573ff9d"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow backend services to reach Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e74c3f085c4d305"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-06256704b1c373fe0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow backend services to communicate with each other",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8084
              },
              {
                "cidr_blocks": [],
                "description": "Allow the admin frontend to reach auth and admin services",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d585d81e65707789"
                ],
                "self": false,
                "to_port": 8084
              },
              {
                "cidr_blocks": [],
                "description": "Allow the customer frontend to reach backend services",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019f32718dbb9febc"
                ],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "shopcloud-backend-sg",
            "name_prefix": "",
            "owner_id": "909487697971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopcloud-backend-sg"
            },
            "tags_all": {
              "Name": "shopcloud-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:security-group/sg-0d76a9ef369c3f50c",
            "description": "Internet-facing ingress controller for the customer storefront",
            "egress": [],
            "id": "sg-0d76a9ef369c3f50c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shopcloud-customer-ingress-sg",
            "name_prefix": "",
            "owner_id": "909487697971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopcloud-customer-ingress-sg"
            },
            "tags_all": {
              "Name": "shopcloud-customer-ingress-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:security-group/sg-053bd557b6573ff9d",
            "description": "RDS PostgreSQL access for backend services",
            "egress": [],
            "id": "sg-053bd557b6573ff9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS worker nodes/pods to reach PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0442b050beee03efe"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow backend services to reach PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06256704b1c373fe0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "shopcloud-database-sg",
            "name_prefix": "",
            "owner_id": "909487697971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopcloud-database-sg"
            },
            "tags_all": {
              "Name": "shopcloud-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:security-group/sg-019f32718dbb9febc",
            "description": "Customer frontend workloads behind the public ingress controller",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow the customer frontend to proxy API traffic to backend services",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06256704b1c373fe0"
                ],
                "self": false,
                "to_port": 8083
              }
            ],
            "id": "sg-019f32718dbb9febc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow the customer ingress controller to reach the frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d76a9ef369c3f50c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shopcloud-frontend-sg",
            "name_prefix": "",
            "owner_id": "909487697971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopcloud-frontend-sg"
            },
            "tags_all": {
              "Name": "shopcloud-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:security-group/sg-04e74c3f085c4d305",
            "description": "Redis access for backend services",
            "egress": [],
            "id": "sg-04e74c3f085c4d305",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS worker nodes/pods to reach Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0442b050beee03efe"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Allow backend services to reach Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06256704b1c373fe0"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "shopcloud-redis-sg",
            "name_prefix": "",
            "owner_id": "909487697971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopcloud-redis-sg"
            },
            "tags_all": {
              "Name": "shopcloud-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_from_vpn_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.100.0.0/22"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3464691421",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d585d81e65707789",
            "security_group_rule_id": "sgr-066c219baef4ea4ef",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_from_vpn_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.100.0.0/22"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3205524260",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d585d81e65707789",
            "security_group_rule_id": "sgr-0ac917e24b4e8b94f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_to_backend_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow admin frontend to reach admin-service",
            "from_port": 8084,
            "id": "sgrule-669393383",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d585d81e65707789",
            "security_group_rule_id": "sgr-05cbba5af6fde3afd",
            "self": false,
            "source_security_group_id": "sg-06256704b1c373fe0",
            "timeouts": null,
            "to_port": 8084,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin",
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_to_backend_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow admin frontend to reach auth-service",
            "from_port": 8080,
            "id": "sgrule-2147299738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d585d81e65707789",
            "security_group_rule_id": "sgr-0d502bd6905c05db0",
            "self": false,
            "source_security_group_id": "sg-06256704b1c373fe0",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin",
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the admin frontend to reach auth and admin services",
            "from_port": 8080,
            "id": "sgrule-1404330528",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06256704b1c373fe0",
            "security_group_rule_id": "sgr-0d52944d4feee19be",
            "self": false,
            "source_security_group_id": "sg-0d585d81e65707789",
            "timeouts": null,
            "to_port": 8084,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.admin",
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_from_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the customer frontend to reach backend services",
            "from_port": 8080,
            "id": "sgrule-141331045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06256704b1c373fe0",
            "security_group_rule_id": "sgr-0541a9afb0587f7d6",
            "self": false,
            "source_security_group_id": "sg-019f32718dbb9febc",
            "timeouts": null,
            "to_port": 8083,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_self_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow backend services to communicate with each other",
            "from_port": 8080,
            "id": "sgrule-1077376356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06256704b1c373fe0",
            "security_group_rule_id": "sgr-047947d8aae04bd4a",
            "self": false,
            "source_security_group_id": "sg-06256704b1c373fe0",
            "timeouts": null,
            "to_port": 8084,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_to_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow backend services to reach PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-2371809313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06256704b1c373fe0",
            "security_group_rule_id": "sgr-0cf1f1241ceeecc0a",
            "self": false,
            "source_security_group_id": "sg-053bd557b6573ff9d",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_to_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow backend services to reach Redis",
            "from_port": 6379,
            "id": "sgrule-2999750794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06256704b1c373fe0",
            "security_group_rule_id": "sgr-0c0d11de2c1f91dd8",
            "self": false,
            "source_security_group_id": "sg-04e74c3f085c4d305",
            "timeouts": null,
            "to_port": 6379,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "customer_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3358004714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d76a9ef369c3f50c",
            "security_group_rule_id": "sgr-0577bccc0e35ff129",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.customer_ingress",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "customer_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1869567320",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d76a9ef369c3f50c",
            "security_group_rule_id": "sgr-03f9942163608d2f9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.customer_ingress",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_from_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow backend services to reach PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-1925822427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053bd557b6573ff9d",
            "security_group_rule_id": "sgr-00fb0ae4268186186",
            "self": false,
            "source_security_group_id": "sg-06256704b1c373fe0",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_from_eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS worker nodes/pods to reach PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-4172845770",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053bd557b6573ff9d",
            "security_group_rule_id": "sgr-07210be1f5d0f68c6",
            "self": false,
            "source_security_group_id": "sg-0442b050beee03efe",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.database",
            "aws_vpc.main",
            "module.eks.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_from_customer_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the customer ingress controller to reach the frontend",
            "from_port": 80,
            "id": "sgrule-3596260696",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-019f32718dbb9febc",
            "security_group_rule_id": "sgr-070b627ccdbcba1f1",
            "self": false,
            "source_security_group_id": "sg-0d76a9ef369c3f50c",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.customer_ingress",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_to_backend_customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the customer frontend to proxy API traffic to backend services",
            "from_port": 8080,
            "id": "sgrule-3914219577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-019f32718dbb9febc",
            "security_group_rule_id": "sgr-056279485823d90bb",
            "self": false,
            "source_security_group_id": "sg-06256704b1c373fe0",
            "timeouts": null,
            "to_port": 8083,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_from_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow backend services to reach Redis",
            "from_port": 6379,
            "id": "sgrule-2577393765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e74c3f085c4d305",
            "security_group_rule_id": "sgr-0e0b866f31cc335bf",
            "self": false,
            "source_security_group_id": "sg-06256704b1c373fe0",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_from_eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS worker nodes/pods to reach Redis",
            "from_port": 6379,
            "id": "sgrule-334417268",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e74c3f085c4d305",
            "security_group_rule_id": "sgr-03db66b7528d260f0",
            "self": false,
            "source_security_group_id": "sg-0442b050beee03efe",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main",
            "module.eks.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpn_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpn_ingress_from_clients",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:subnet/subnet-06856645e2c6fc186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06856645e2c6fc186",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909487697971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ShopCloud-DB-Subnet-1"
            },
            "tags_all": {
              "Name": "ShopCloud-DB-Subnet-1"
            },
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:subnet/subnet-075fa42dd6ae52b93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075fa42dd6ae52b93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909487697971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ShopCloud-DB-Subnet-2"
            },
            "tags_all": {
              "Name": "ShopCloud-DB-Subnet-2"
            },
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:subnet/subnet-08cd956b6f8ec8b02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cd956b6f8ec8b02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909487697971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ShopCloud-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "ShopCloud-Private-Subnet-1"
            },
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:subnet/subnet-022da08ec290993e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022da08ec290993e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909487697971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ShopCloud-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "ShopCloud-Private-Subnet-2"
            },
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:subnet/subnet-0cc5da8ceb5844298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc5da8ceb5844298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909487697971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ShopCloud-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "ShopCloud-Public-Subnet-1"
            },
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:subnet/subnet-02a8c7b207546307e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a8c7b207546307e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909487697971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ShopCloud-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "ShopCloud-Public-Subnet-2"
            },
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:vpc/vpc-0593e90ba5de1af25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008f207a88a45f144",
            "default_route_table_id": "rtb-0dc83cd0bb8df5152",
            "default_security_group_id": "sg-0c0fb2a1e21ec1d15",
            "dhcp_options_id": "dopt-0aec283f2b6996e11",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0593e90ba5de1af25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc83cd0bb8df5152",
            "owner_id": "909487697971",
            "tags": {
              "Name": "ShopCloud-VPC"
            },
            "tags_all": {
              "Name": "ShopCloud-VPC"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:security-group/sg-00ef8953486bed254",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00ef8953486bed254",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/22"
                ],
                "description": "Allow Kubernetes API access from the VPN CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0442b050beee03efe"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "shopcloud-dev-cluster-2026050115162911130000000c",
            "name_prefix": "shopcloud-dev-cluster-",
            "owner_id": "909487697971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopcloud-dev-cluster"
            },
            "tags_all": {
              "Name": "shopcloud-dev-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909487697971:security-group/sg-0442b050beee03efe",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow EKS worker nodes to reach AWS services through NAT/VPC endpoints",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0442b050beee03efe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS worker nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ef8953486bed254"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ef8953486bed254"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ef8953486bed254"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ef8953486bed254"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ef8953486bed254"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ef8953486bed254"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "shopcloud-dev-node-2026050115162872720000000b",
            "name_prefix": "shopcloud-dev-node-",
            "owner_id": "909487697971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopcloud-dev-node",
              "kubernetes.io/cluster/shopcloud-dev": "owned"
            },
            "tags_all": {
              "Name": "shopcloud-dev-node",
              "kubernetes.io/cluster/shopcloud-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593e90ba5de1af25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1567536322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ef8953486bed254",
            "security_group_rule_id": "sgr-0894f393fa37c4a80",
            "self": false,
            "source_security_group_id": "sg-0442b050beee03efe",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_vpn_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.100.0.0/22"
            ],
            "description": "Allow Kubernetes API access from the VPN CIDR",
            "from_port": 443,
            "id": "sgrule-3446293171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ef8953486bed254",
            "security_group_rule_id": "sgr-0e9bc4e4c42312108",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow EKS worker nodes to reach AWS services through NAT/VPC endpoints",
            "from_port": 0,
            "id": "sgrule-391913758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-0bf38c7639b3480d9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-383854537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-0ca741c57f698fa09",
            "self": false,
            "source_security_group_id": "sg-00ef8953486bed254",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1235191499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-0c092326ecd2e4526",
            "self": false,
            "source_security_group_id": "sg-00ef8953486bed254",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2162024797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-085dd682cb4dd8d67",
            "self": false,
            "source_security_group_id": "sg-00ef8953486bed254",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2474761596",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-07641fcdf70331bab",
            "self": false,
            "source_security_group_id": "sg-00ef8953486bed254",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4146130615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-0bc8c5138579f121f",
            "self": false,
            "source_security_group_id": "sg-00ef8953486bed254",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1629421511",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-0743c61a8add85733",
            "self": false,
            "source_security_group_id": "sg-00ef8953486bed254",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2625306977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-092c2cb73e4a70898",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS worker nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2611702947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-08b77ee194f48d4de",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1054382345",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-0fce09f2da0f10673",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2592553702",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0442b050beee03efe",
            "security_group_rule_id": "sgr-0653761446492d76e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}